--- a/HappyCup/app/src/main/res/layout/nav_header.xml
+++ b/HappyCup/app/src/main/res/layout/nav_header.xml
@@ -126,13 +126,13 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="19dp"
+        android:layout_marginStart="10dp"
         android:text="환전"
         android:textColor="@android:color/black"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/imageView13"
-        app:layout_constraintEnd_toEndOf="@id/imageView13"
+        app:layout_constraintStart_toEndOf="@id/imageView17"
         app:layout_constraintTop_toTopOf="@+id/imageView13" />
 
     <ImageView
@@ -149,11 +149,18 @@
         android:id="@+id/imageView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/textView12"
+        app:layout_constraintStart_toEndOf="@id/guideline2"
         app:layout_constraintTop_toTopOf="@+id/imageView13"
         app:srcCompat="@drawable/icon_dongjun" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.35"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
