--- a/HappyCup/app/src/main/res/values/themes.xml
+++ b/HappyCup/app/src/main/res/values/themes.xml
@@ -14,14 +14,17 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!-- BaseText -->
+    <style name="BaseText">
+        <item name ="android:textColor">@color/black</item>
+        <item name ="android:textStyle">bold</item>
+        <item name ="android:textSize">20sp</item>
+    </style>
+
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_loading</item>
     </style>
 
-    <style name="BaseTextStyle">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textStyle">bold</item>
-    </style>
     <!-- dropDownListViewStyle 추가 -->
     <style name="NavigationDrawerStyle">
         <item name="android:textSize">20sp</item><!-- text size in menu-->
@@ -39,4 +42,34 @@
         <item name="listPreferredItemPaddingRight">8dp</item>
     </style>
 
+    <!-- searchview text size -->
+    <style name = "AppSearchView" parent="Widget.AppCompat.SearchView">
+        <item name="android:textSize">15dp</item>
+    </style>
+
+    <!-- button click -->
+    <style name ="BlueRipple">
+        <item name = "colorControlHighlight">#0000ff</item>
+    </style>
+
+    <!-- 서치뷰 -->
+    <!-- 메테리얼테마 -->
+    <style name="MaterialTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+        <!-- ... -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="MyRadioButton" parent="Widget.MaterialComponents.CompoundButton.RadioButton">
+        <item name="colorControlNormal">@color/colorLightGray</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="colorControlHighlight">@color/colorLightPink</item>
+    </style>
+
+    <style name="MySwitchButton" parent="">
+        <item name="colorSwitchThumbNormal">@color/colorLightGray</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="android:colorForeground">@color/colorLightGray</item>
+    </style>
 </resources>
